--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,10 @@
 #SPDX-License-Identifier: MIT-0
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: xiple
+  description: RPM Fusion repositories installation
+
+  role_name: rpmfusion
+  namespace: xiple
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
