--- a/molecule/default/inventory/hosts.yml
+++ b/molecule/default/inventory/hosts.yml
@@ -5,6 +5,10 @@ all:
       hosts:
         molecule-fedora:
           ansible_connection: containers.podman.podman
-          container_image: ghcr.io/ansible/community-ansible-dev-tools:latest
+          container_image_path: ${MOLECULE_SCENARIO_DIRECTORY}
+          container_image_tag: molecule-fedora:42
+          container_image: localhost/molecule-fedora:42
           container_command: sleep 1d
           container_privileged: false
+          container_rm: true
+          container_rmi: true
