Added role in converge file

--- a/molecule/default/inventory/hosts.yml
+++ b/molecule/default/inventory/hosts.yml
@@ -11,4 +11,4 @@ all:
           container_command: sleep 1d
           container_privileged: false
           container_rm: true
-          container_rmi: true
+          container_rmi: false
