--- a/molecule/default/Containerfile
+++ b/molecule/default/Containerfile
@@ -1,9 +1,17 @@
 FROM registry.fedoraproject.org/fedora:42
 
-# install dependencies
+ENV pip_packages="ansible"
+
+# Install requirements.
 RUN dnf -y upgrade \
-    && dnf -y install python3 python3-libdnf5 \
+    && dnf -y install python3 python3-pip python3-libdnf5 \
     && dnf clean all
 
-# run the command
+# Upgrading pip
+RUN python -m pip install --upgrade pip
+
+# Install Ansible via Pip.
+RUN python -m pip install $pip_packages
+
+# Run the command
 CMD ["/bin/bash"]
