--- a/molecule/default/Containerfile
+++ b/molecule/default/Containerfile
@@ -3,15 +3,18 @@ FROM registry.fedoraproject.org/fedora:42
 ENV pip_packages="ansible"
 
 # Install requirements.
+# python3-libdnf5 for ansible.builtin.dnf module
+# python3-rpm for ansible.builtin.package_facts module
+
 RUN dnf -y upgrade \
-    && dnf -y install python3 python3-pip python3-libdnf5 \
+    && dnf -y install python3 python3-pip python3-libdnf5 python3-rpm \
     && dnf clean all
 
 # Upgrading pip
-RUN python -m pip install --upgrade pip
+RUN python3 -m pip install --upgrade pip
 
 # Install Ansible via Pip.
-RUN python -m pip install $pip_packages
+RUN python3 -m pip install $pip_packages
 
 # Run the command
 CMD ["/bin/bash"]
