--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -2,7 +2,18 @@
 - name: Verify
   hosts: molecule
   gather_facts: true
+  vars_files:
+    - ../../vars/main.yml
   tasks:
+    - name: Gather the package facts
+      ansible.builtin.package_facts:
+        manager: auto
+
+    - name: Fail if {{ gpg_keys_package }} package is installed
+      ansible.builtin.fail:
+        msg: "{{ gpg_keys_package }} package is not installed"
+      when: gpg_keys_package not in ansible_facts.packages
+
     - name: Install a package from the free repository
       ansible.builtin.package:
         name: rpmfusion-free-release-tainted
