--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,3 +6,13 @@
   ansible.builtin.dnf:
     name: "{{ gpg_keys_package }}"
     state: present
+
+- name: Install RPM Fusion 'free' gpg key
+  ansible.builtin.rpm_key:
+    key: "{{ rmpfusion_free_rpmkey_path }}"
+    state: present
+
+- name: Install RPM Fusion 'free' repository
+  ansible.builtin.dnf:
+    name: "{{ rmpfusion_free_repo_url }}"
+    state: present
