Fix ansible-lint issues

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -9,7 +9,7 @@
       ansible.builtin.package_facts:
         manager: auto
 
-    - name: Fail if {{ gpg_keys_package }} package is not installed
+    - name: Fail if distribution GPG keys package is not installed
       ansible.builtin.fail:
         msg: "{{ gpg_keys_package }} package is not installed"
       when: gpg_keys_package not in ansible_facts.packages
