--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Set up Python 3.
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
 
       - name: Install test dependencies.
         run: pip3 install yamllint ansible-lint
@@ -38,6 +40,8 @@ jobs:
 
       - name: Set up Python 3.
         uses: actions/setup-python@v6
+        with:
+          python-version: '3.13'
 
       - name: Install test dependencies.
         run: |
